k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaos-ns
  labels:
    app: chaos-poc
    litmuschaos.io/chaos: "true"
